--- a/css/production-styles.css
+++ b/css/production-styles.css
@@ -11115,7 +11115,7 @@ header.core-site-header .large-nav .top-nav ul.nav.brands li a#switch-to-maharam
 }
 
 header.core-site-header .large-nav .top-nav ul.nav.brands li a#switch-to-knoll-textiles:not(.active):hover {
-    color:#236684 !important
+    color:#1B7F9E !important
 }
 
 header.core-site-header .large-nav .main-nav {
